mml_parser.output
Terminals unused in grammar

    tPRIVATE


Grammar

    0 $accept: file $end

    1 file: ε
    2     | vardecs
    3     | program
    4     | vardecs program

    5 program: tBEGIN tEND
    6        | tBEGIN vardecs tEND
    7        | tBEGIN instructions tEND
    8        | tBEGIN vardecs instructions tEND

    9 vardecs: vardec ';'
   10        | vardecs vardec ';'

   11 instructions: instruction
   12             | instructions instruction

   13 instruction: expr ';'
   14            | args tWRITE
   15            | args tWRITELN
   16            | tWHILE '(' expr ')' inst
   17            | tIF '(' expr ')' inst
   18            | tIF '(' expr ')' inst iffalse
   19            | block
   20            | stop ';'
   21            | next ';'
   22            | return ';'

   23 iffalse: tELIF '(' expr ')' inst
   24        | tELIF '(' expr ')' inst iffalse
   25        | tELSE instruction

   26 inst: expr ';'
   27     | args tWRITE
   28     | args tWRITELN
   29     | tWHILE '(' expr ')' inst
   30     | tIF '(' expr ')' inst
   31     | block
   32     | stop ';'
   33     | next ';'
   34     | return ';'

   35 vardec: tPUBLIC data_type tIDENTIFIER opt_initializer
   36       | tFOREIGN func_type tIDENTIFIER
   37       | tFORWARD data_type tIDENTIFIER
   38       | data_type tIDENTIFIER opt_initializer
   39       | tPUBLIC tIDENTIFIER '=' expr
   40       | tPUBLIC tTYPE_AUTO tIDENTIFIER '=' expr
   41       | tTYPE_AUTO tIDENTIFIER '=' expr

   42 data_type: tTYPE_STRING
   43          | tTYPE_INT
   44          | tTYPE_REAL
   45          | tTYPE_VOID
   46          | '[' data_type ']'
   47          | func_type

   48 opt_type_seq: ε
   49             | type_seq

   50 type_seq: data_type
   51         | type_seq ',' data_type

   52 func_type: data_type '<' opt_type_seq '>'

   53 fdef: '(' argdecs ')' tARROW data_type block

   54 fcall: lval '(' args ')'
   55      | '(' expr ')' '(' args ')'
   56      | tRECURSION '(' args ')'

   57 opt_initializer: ε
   58                | '=' expr

   59 block: '{' '}'
   60      | '{' vardecs '}'
   61      | '{' instructions '}'
   62      | '{' vardecs instructions '}'

   63 stop: tSTOP
   64     | tSTOP tINTEGER

   65 next: tNEXT
   66     | tNEXT tINTEGER

   67 return: tRETURN
   68       | tRETURN expr

   69 argdecs: ε
   70        | argdec
   71        | argdecs ',' argdec

   72 argdec: data_type tIDENTIFIER

   73 args: ε
   74     | expr
   75     | args ',' expr

   76 lval: tIDENTIFIER
   77     | expr '[' expr ']'

   78 expr: integer
   79     | real
   80     | string
   81     | tNULLPTR
   82     | lval
   83     | lval '=' expr
   84     | expr '+' expr
   85     | expr '-' expr
   86     | expr '*' expr
   87     | expr '/' expr
   88     | expr '%' expr
   89     | expr '<' expr
   90     | expr '>' expr
   91     | expr tGE expr
   92     | expr tLE expr
   93     | expr tNE expr
   94     | expr tEQ expr
   95     | expr tAND expr
   96     | expr tOR expr
   97     | '-' expr
   98     | '+' expr
   99     | lval tADDRESSOF
  100     | tNOT expr
  101     | tREAD
  102     | fdef
  103     | fcall
  104     | tSIZEOF '(' expr ')'
  105     | '(' expr ')'
  106     | '[' expr ']'

  107 integer: tINTEGER

  108 real: tREAL

  109 string: tSTRING
  110       | string tSTRING


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 88
    '(' (40) 16 17 18 23 24 29 30 53 54 55 56 104 105
    ')' (41) 16 17 18 23 24 29 30 53 54 55 56 104 105
    '*' (42) 86
    '+' (43) 84 98
    ',' (44) 51 71 75
    '-' (45) 85 97
    '/' (47) 87
    ';' (59) 9 10 13 20 21 22 26 32 33 34
    '<' (60) 52 89
    '=' (61) 39 40 41 58 83
    '>' (62) 52 90
    '[' (91) 46 77 106
    ']' (93) 46 77 106
    '{' (123) 59 60 61 62
    '}' (125) 59 60 61 62
    error (256)
    tINTEGER <i> (258) 64 66 107
    tREAL <d> (259) 108
    tIDENTIFIER <s> (260) 35 36 37 38 39 40 41 72 76
    tSTRING <s> (261) 109 110
    tNULLPTR <expression> (262) 81
    tWHILE (263) 16 29
    tIF (264) 17 18 30
    tBEGIN (265) 5 6 7 8
    tEND (266) 5 6 7 8
    tWRITE (267) 14 27
    tWRITELN (268) 15 28
    tREAD (269) 101
    tARROW (270) 53
    tTYPE_STRING (271) 42
    tTYPE_INT (272) 43
    tTYPE_REAL (273) 44
    tTYPE_VOID (274) 45
    tTYPE_AUTO (275) 40 41
    tPUBLIC (276) 35 39 40
    tFORWARD (277) 37
    tFOREIGN (278) 36
    tPRIVATE (279)
    tSTOP (280) 63 64
    tNEXT (281) 65 66
    tRETURN (282) 67 68
    tRECURSION (283) 56
    tSIZEOF (284) 104
    tADDRESSOF (285) 99
    tNOT (286) 100
    tIFX (287)
    tELIF (288) 23 24
    tELSE (289) 25
    tUNARY (290)
    tOR (291) 96
    tAND (292) 95
    tGE (293) 91
    tLE (294) 92
    tEQ (295) 94
    tNE (296) 93


Nonterminals, with rules where they appear

    $accept (58)
        on left: 0
    file <node> (59)
        on left: 1 2 3 4
        on right: 0
    program <node> (60)
        on left: 5 6 7 8
        on right: 3 4
    vardecs <sequence> (61)
        on left: 9 10
        on right: 2 4 6 8 10 60 62
    instructions <sequence> (62)
        on left: 11 12
        on right: 7 8 12 61 62
    instruction <node> (63)
        on left: 13 14 15 16 17 18 19 20 21 22
        on right: 11 12 25
    iffalse <node> (64)
        on left: 23 24 25
        on right: 18 24
    inst <node> (65)
        on left: 26 27 28 29 30 31 32 33 34
        on right: 16 17 18 23 24 29 30
    vardec <node> (66)
        on left: 35 36 37 38 39 40 41
        on right: 9 10
    data_type <type> (67)
        on left: 42 43 44 45 46 47
        on right: 35 37 38 46 50 51 52 53 72
    opt_type_seq <ts> (68)
        on left: 48 49
        on right: 52
    type_seq <ts> (69)
        on left: 50 51
        on right: 49 51
    func_type <type> (70)
        on left: 52
        on right: 36 47
    fdef <expression> (71)
        on left: 53
        on right: 102
    fcall <expression> (72)
        on left: 54 55 56
        on right: 103
    opt_initializer <expression> (73)
        on left: 57 58
        on right: 35 38
    block <block> (74)
        on left: 59 60 61 62
        on right: 19 31 53
    stop <node> (75)
        on left: 63 64
        on right: 20 32
    next <node> (76)
        on left: 65 66
        on right: 21 33
    return <node> (77)
        on left: 67 68
        on right: 22 34
    argdecs <sequence> (78)
        on left: 69 70 71
        on right: 53 71
    argdec <node> (79)
        on left: 72
        on right: 70 71
    args <sequence> (80)
        on left: 73 74 75
        on right: 14 15 27 28 54 55 56 75
    lval <lvalue> (81)
        on left: 76 77
        on right: 54 82 83 99
    expr <expression> (82)
        on left: 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106
        on right: 13 16 17 18 23 24 26 29 30 39 40 41 55 58 68 74 75 77 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 100 104 105 106
    integer <expression> (83)
        on left: 107
        on right: 78
    real <expression> (84)
        on left: 108
        on right: 79
    string <s> (85)
        on left: 109 110
        on right: 80 110


State 0

    0 $accept: • file $end

    tBEGIN        shift, and go to state 1
    tTYPE_STRING  shift, and go to state 2
    tTYPE_INT     shift, and go to state 3
    tTYPE_REAL    shift, and go to state 4
    tTYPE_VOID    shift, and go to state 5
    tTYPE_AUTO    shift, and go to state 6
    tPUBLIC       shift, and go to state 7
    tFORWARD      shift, and go to state 8
    tFOREIGN      shift, and go to state 9
    '['           shift, and go to state 10

    $default  reduce using rule 1 (file)

    file       go to state 11
    program    go to state 12
    vardecs    go to state 13
    vardec     go to state 14
    data_type  go to state 15
    func_type  go to state 16


State 1

    5 program: tBEGIN • tEND
    6        | tBEGIN • vardecs tEND
    7        | tBEGIN • instructions tEND
    8        | tBEGIN • vardecs instructions tEND

    tINTEGER      shift, and go to state 17
    tREAL         shift, and go to state 18
    tIDENTIFIER   shift, and go to state 19
    tSTRING       shift, and go to state 20
    tNULLPTR      shift, and go to state 21
    tWHILE        shift, and go to state 22
    tIF           shift, and go to state 23
    tEND          shift, and go to state 24
    tREAD         shift, and go to state 25
    tTYPE_STRING  shift, and go to state 2
    tTYPE_INT     shift, and go to state 3
    tTYPE_REAL    shift, and go to state 4
    tTYPE_VOID    shift, and go to state 5
    tTYPE_AUTO    shift, and go to state 6
    tPUBLIC       shift, and go to state 7
    tFORWARD      shift, and go to state 8
    tFOREIGN      shift, and go to state 9
    tSTOP         shift, and go to state 26
    tNEXT         shift, and go to state 27
    tRETURN       shift, and go to state 28
    tRECURSION    shift, and go to state 29
    tSIZEOF       shift, and go to state 30
    tNOT          shift, and go to state 31
    '('           shift, and go to state 32
    '['           shift, and go to state 33
    '+'           shift, and go to state 34
    '-'           shift, and go to state 35
    '{'           shift, and go to state 36

    $default  reduce using rule 73 (args)

    vardecs       go to state 37
    instructions  go to state 38
    instruction   go to state 39
    vardec        go to state 14
    data_type     go to state 15
    func_type     go to state 16
    fdef          go to state 40
    fcall         go to state 41
    block         go to state 42
    stop          go to state 43
    next          go to state 44
    return        go to state 45
    args          go to state 46
    lval          go to state 47
    expr          go to state 48
    integer       go to state 49
    real          go to state 50
    string        go to state 51


State 2

   42 data_type: tTYPE_STRING •

    $default  reduce using rule 42 (data_type)


State 3

   43 data_type: tTYPE_INT •

    $default  reduce using rule 43 (data_type)


State 4

   44 data_type: tTYPE_REAL •

    $default  reduce using rule 44 (data_type)


State 5

   45 data_type: tTYPE_VOID •

    $default  reduce using rule 45 (data_type)


State 6

   41 vardec: tTYPE_AUTO • tIDENTIFIER '=' expr

    tIDENTIFIER  shift, and go to state 52


State 7

   35 vardec: tPUBLIC • data_type tIDENTIFIER opt_initializer
   39       | tPUBLIC • tIDENTIFIER '=' expr
   40       | tPUBLIC • tTYPE_AUTO tIDENTIFIER '=' expr

    tIDENTIFIER   shift, and go to state 53
    tTYPE_STRING  shift, and go to state 2
    tTYPE_INT     shift, and go to state 3
    tTYPE_REAL    shift, and go to state 4
    tTYPE_VOID    shift, and go to state 5
    tTYPE_AUTO    shift, and go to state 54
    '['           shift, and go to state 10

    data_type  go to state 55
    func_type  go to state 16


State 8

   37 vardec: tFORWARD • data_type tIDENTIFIER

    tTYPE_STRING  shift, and go to state 2
    tTYPE_INT     shift, and go to state 3
    tTYPE_REAL    shift, and go to state 4
    tTYPE_VOID    shift, and go to state 5
    '['           shift, and go to state 10

    data_type  go to state 56
    func_type  go to state 16


State 9

   36 vardec: tFOREIGN • func_type tIDENTIFIER

    tTYPE_STRING  shift, and go to state 2
    tTYPE_INT     shift, and go to state 3
    tTYPE_REAL    shift, and go to state 4
    tTYPE_VOID    shift, and go to state 5
    '['           shift, and go to state 10

    data_type  go to state 57
    func_type  go to state 58


State 10

   46 data_type: '[' • data_type ']'

    tTYPE_STRING  shift, and go to state 2
    tTYPE_INT     shift, and go to state 3
    tTYPE_REAL    shift, and go to state 4
    tTYPE_VOID    shift, and go to state 5
    '['           shift, and go to state 10

    data_type  go to state 59
    func_type  go to state 16


State 11

    0 $accept: file • $end

    $end  shift, and go to state 60


State 12

    3 file: program •

    $default  reduce using rule 3 (file)


State 13

    2 file: vardecs •
    4     | vardecs • program
   10 vardecs: vardecs • vardec ';'

    tBEGIN        shift, and go to state 1
    tTYPE_STRING  shift, and go to state 2
    tTYPE_INT     shift, and go to state 3
    tTYPE_REAL    shift, and go to state 4
    tTYPE_VOID    shift, and go to state 5
    tTYPE_AUTO    shift, and go to state 6
    tPUBLIC       shift, and go to state 7
    tFORWARD      shift, and go to state 8
    tFOREIGN      shift, and go to state 9
    '['           shift, and go to state 10

    $default  reduce using rule 2 (file)

    program    go to state 61
    vardec     go to state 62
    data_type  go to state 15
    func_type  go to state 16


State 14

    9 vardecs: vardec • ';'

    ';'  shift, and go to state 63


State 15

   38 vardec: data_type • tIDENTIFIER opt_initializer
   52 func_type: data_type • '<' opt_type_seq '>'

    tIDENTIFIER  shift, and go to state 64
    '<'          shift, and go to state 65


State 16

   47 data_type: func_type •

    $default  reduce using rule 47 (data_type)


State 17

  107 integer: tINTEGER •

    $default  reduce using rule 107 (integer)


State 18

  108 real: tREAL •

    $default  reduce using rule 108 (real)


State 19

   76 lval: tIDENTIFIER •

    $default  reduce using rule 76 (lval)


State 20

  109 string: tSTRING •

    $default  reduce using rule 109 (string)


State 21

   81 expr: tNULLPTR •

    $default  reduce using rule 81 (expr)


State 22

   16 instruction: tWHILE • '(' expr ')' inst

    '('  shift, and go to state 66


State 23

   17 instruction: tIF • '(' expr ')' inst
   18            | tIF • '(' expr ')' inst iffalse

    '('  shift, and go to state 67


State 24

    5 program: tBEGIN tEND •

    $default  reduce using rule 5 (program)


State 25

  101 expr: tREAD •

    $default  reduce using rule 101 (expr)


State 26

   63 stop: tSTOP •
   64     | tSTOP • tINTEGER

    tINTEGER  shift, and go to state 68

    $default  reduce using rule 63 (stop)


State 27

   65 next: tNEXT •
   66     | tNEXT • tINTEGER

    tINTEGER  shift, and go to state 69

    $default  reduce using rule 65 (next)


State 28

   67 return: tRETURN •
   68       | tRETURN • expr

    tINTEGER     shift, and go to state 17
    tREAL        shift, and go to state 18
    tIDENTIFIER  shift, and go to state 19
    tSTRING      shift, and go to state 20
    tNULLPTR     shift, and go to state 21
    tREAD        shift, and go to state 25
    tRECURSION   shift, and go to state 29
    tSIZEOF      shift, and go to state 30
    tNOT         shift, and go to state 31
    '('          shift, and go to state 32
    '['          shift, and go to state 70
    '+'          shift, and go to state 34
    '-'          shift, and go to state 35

    $default  reduce using rule 67 (return)

    fdef     go to state 40
    fcall    go to state 41
    lval     go to state 47
    expr     go to state 71
    integer  go to state 49
    real     go to state 50
    string   go to state 51


State 29

   56 fcall: tRECURSION • '(' args ')'

    '('  shift, and go to state 72


State 30

  104 expr: tSIZEOF • '(' expr ')'

    '('  shift, and go to state 73


State 31

  100 expr: tNOT • expr

    tINTEGER     shift, and go to state 17
    tREAL        shift, and go to state 18
    tIDENTIFIER  shift, and go to state 19
    tSTRING      shift, and go to state 20
    tNULLPTR     shift, and go to state 21
    tREAD        shift, and go to state 25
    tRECURSION   shift, and go to state 29
    tSIZEOF      shift, and go to state 30
    tNOT         shift, and go to state 31
    '('          shift, and go to state 32
    '['          shift, and go to state 70
    '+'          shift, and go to state 34
    '-'          shift, and go to state 35

    fdef     go to state 40
    fcall    go to state 41
    lval     go to state 47
    expr     go to state 74
    integer  go to state 49
    real     go to state 50
    string   go to state 51


State 32

   53 fdef: '(' • argdecs ')' tARROW data_type block
   55 fcall: '(' • expr ')' '(' args ')'
  105 expr: '(' • expr ')'

    tINTEGER      shift, and go to state 17
    tREAL         shift, and go to state 18
    tIDENTIFIER   shift, and go to state 19
    tSTRING       shift, and go to state 20
    tNULLPTR      shift, and go to state 21
    tREAD         shift, and go to state 25
    tTYPE_STRING  shift, and go to state 2
    tTYPE_INT     shift, and go to state 3
    tTYPE_REAL    shift, and go to state 4
    tTYPE_VOID    shift, and go to state 5
    tRECURSION    shift, and go to state 29
    tSIZEOF       shift, and go to state 30
    tNOT          shift, and go to state 31
    '('           shift, and go to state 32
    '['           shift, and go to state 33
    '+'           shift, and go to state 34
    '-'           shift, and go to state 35

    $default  reduce using rule 69 (argdecs)

    data_type  go to state 75
    func_type  go to state 16
    fdef       go to state 40
    fcall      go to state 41
    argdecs    go to state 76
    argdec     go to state 77
    lval       go to state 47
    expr       go to state 78
    integer    go to state 49
    real       go to state 50
    string     go to state 51


State 33

   46 data_type: '[' • data_type ']'
  106 expr: '[' • expr ']'

    tINTEGER      shift, and go to state 17
    tREAL         shift, and go to state 18
    tIDENTIFIER   shift, and go to state 19
    tSTRING       shift, and go to state 20
    tNULLPTR      shift, and go to state 21
    tREAD         shift, and go to state 25
    tTYPE_STRING  shift, and go to state 2
    tTYPE_INT     shift, and go to state 3
    tTYPE_REAL    shift, and go to state 4
    tTYPE_VOID    shift, and go to state 5
    tRECURSION    shift, and go to state 29
    tSIZEOF       shift, and go to state 30
    tNOT          shift, and go to state 31
    '('           shift, and go to state 32
    '['           shift, and go to state 33
    '+'           shift, and go to state 34
    '-'           shift, and go to state 35

    data_type  go to state 59
    func_type  go to state 16
    fdef       go to state 40
    fcall      go to state 41
    lval       go to state 47
    expr       go to state 79
    integer    go to state 49
    real       go to state 50
    string     go to state 51


State 34

   98 expr: '+' • expr

    tINTEGER     shift, and go to state 17
    tREAL        shift, and go to state 18
    tIDENTIFIER  shift, and go to state 19
    tSTRING      shift, and go to state 20
    tNULLPTR     shift, and go to state 21
    tREAD        shift, and go to state 25
    tRECURSION   shift, and go to state 29
    tSIZEOF      shift, and go to state 30
    tNOT         shift, and go to state 31
    '('          shift, and go to state 32
    '['          shift, and go to state 70
    '+'          shift, and go to state 34
    '-'          shift, and go to state 35

    fdef     go to state 40
    fcall    go to state 41
    lval     go to state 47
    expr     go to state 80
    integer  go to state 49
    real     go to state 50
    string   go to state 51


State 35

   97 expr: '-' • expr

    tINTEGER     shift, and go to state 17
    tREAL        shift, and go to state 18
    tIDENTIFIER  shift, and go to state 19
    tSTRING      shift, and go to state 20
    tNULLPTR     shift, and go to state 21
    tREAD        shift, and go to state 25
    tRECURSION   shift, and go to state 29
    tSIZEOF      shift, and go to state 30
    tNOT         shift, and go to state 31
    '('          shift, and go to state 32
    '['          shift, and go to state 70
    '+'          shift, and go to state 34
    '-'          shift, and go to state 35

    fdef     go to state 40
    fcall    go to state 41
    lval     go to state 47
    expr     go to state 81
    integer  go to state 49
    real     go to state 50
    string   go to state 51


State 36

   59 block: '{' • '}'
   60      | '{' • vardecs '}'
   61      | '{' • instructions '}'
   62      | '{' • vardecs instructions '}'
